--- a/index.html
+++ b/index.html
@@ -351,8 +351,11 @@
         <div class="content">
           <h2>DP機油核心價值</h2>
           <h5>DP機油的優勢</h5>
-          <p>別人進口機油,我們進口技術,別人派送專員勘查進口商,我們派送技術員與國際大廠研發技術,別人進口的是產品,我們去交流的是技術,擁有國際的技術,進口國際原料大廠,在地製造生產,過程全程監督,別人可以抽查前做足準備,我們永遠都在監督下做足品質。</p>
-          <p>我們的主要優勢包括技術的開發和完整產線，允許我們提供個人化開發項目，創造出與別人不同的價值。</p>
+          <p>別人進口機油,我們進口技術,別人派送專員勘查進口商,我們派送技術員與國際大廠研發技術,別人進口的是產品,我們去交流的是技術,擁有國際的技術,進口國際原料大廠,在地製造生產,過程全程監督,別人可以抽查前做足準備,我們永遠都在監督下做足品質。
+          <br>我們的主要優勢包括技術的開發和完整產線，允許我們提供個人化開發項目，創造出與別人不同的價值。</p>
+		  <h2>DP推陳出新</h2>
+          <p>DP機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。
+DP專業機油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
           <h2>DP機油核心價值</h2>
           <h5>TECHNOLOGY</h5>
           <p>我們使用國內外最尖端的技術，DP機油持續挑戰並精進自身技術並保值最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP機油絕不模糊。DP機油產品性能，比市場上任何產品更好。</p>
@@ -361,13 +364,13 @@
           <h5>COMMITMENT</h5>
           <p>DP機油團隊的專業水準鱌國際標準看齊，專注研發和嚴格律己的態度，造就品牌的不同凡響。<br>我們使用國內外最尖端的技術，DP機油持續挑戰並精進自身技術並保值最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。<br>我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP機油絕不懈怠。DP機油產品性能夠比市場上任何產品更好。</p>
           <h2>DP所做的</h2>
-          <p>DP機油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。<br>我們所做的 我們擁有國際的技術，在地的產線，從研發、量產、品管、包裝到出貨，完整的流水線安排，進而達到品質穩定品管優良的最高原則，由網路行銷減少實體店面中被剝奪的利潤以及人事、店面等不必要的成本，給顧客最直接的價格。<br>我們的戰略 我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。<br>我們的策略 我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，成就台灣製造不輸國際品牌之能力。<br>我們的優勢 我們的主要優勢包括技術的開發和完整產線，允許我們提供個人化開發項目，創造出與別人不同的價值。.</p>
+          <p>DP機油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。<br>我們所做的 我們擁有國際的技術，在地的產線，從研發、量產、品管、包裝到出貨，完整的程序，來達到最高品質以及嚴格品管的最高原則，由網路行銷減少實體店面中被剝奪的利潤以及不必要的成本，給顧客最直接的價格。<br>我們的戰略 我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。<br>我們的策略 我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，成就台灣製造不輸國際品牌之能力。<br>我們的優勢 我們的主要優勢包括技術的開發和完整產線，允許我們提供個人化開發項目，創造出與別人不同的價值。.</p>
           <div class="row">
             <div class="col-12 col-md-2"><img src="./img/about/DP.png" alt=""/></div>
             <div class="col-12 col-md-10">
               <h5>DP的堅持</h5>
-              <p>DP機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。</p>
-              <p>我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
+              <p>DP機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。
+              <br>我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
 
             </div>
             <div class="col-12 col-md-2"><img src="./img/about/DP.png" alt=""/></div>
