--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <div id="main">
       <div id="home">
         <div class="cover">
+          <h1 class="display-4">&nbsp;</h1>
+          <h1 class="display-4">&nbsp;</h1>
           <h1 class="display-4">DP專業機油</h1>
+          <p class="lead">&nbsp;</p>
           <p class="lead">主打國際技術台灣在地研發、製造、包裝和品管統在地統一管理並接受客戶需求研發各種油化保養產品。</p>
           <p class="lead">讓每一個消費者能真正使用到符合自己的好產品。            </p><a class="btn btn-light" href="#product" onClick="start()">Continue</a>
         </div>
