--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         <div class="content">
           <h2>DP專業機油特殊優勢</h2>
           <p>別人進口機油,我們進口技術,別人派送專員勘查進口商,我們派送技術員與國際大廠研發技術,別人進口的是產品,我們去交流的是技術,擁有國際的技術,進口國際原料大廠,在地製造生產,過程全程監督,別人可以抽查前做足準備,我們永遠都在監督下做足品質。</p>
-          <h2>DP機油最終目標</h2>
+          <h2>DP專業機油最終目標</h2>
           <p>DP專業機油與台灣在地專業製造商合作，以及我們自身專業且完善的實驗室，來做到更優良的產品，來超越各種進口機油，以及台灣在地其他品牌，成為最專業的機油製造團隊，打造最強大的機油品牌</p>
 		      <h2>DP推陳出新</h2>
           <p>DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。DP專業機油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
-          <h2>DP機油核心價值</h2>
+          <h2>DP專業機油核心價值</h2>
           <h5>TECHNOLOGY</h5>
           <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用自身嚴格把關和挑選國際級原物料,來創造最高品質的產品，在這方面的品質DP專業機油絕不怠惰。DP專業機油的產品性能，比市場上任何產品更好更優良。</p>
           <h5>REATION</h5>
           <p>DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。</p>
           <h5>COMMITMENT</h5>
-          <p>DP專業機油團隊的專業水準鱌國際標準看齊，專注研發和嚴格律己的態度，造就品牌的不同凡響。<br>我們使用國內外最尖端的技術，DP機油持續挑戰並精進自身技術並保值最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。<br>我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP機油絕不懈怠。DP機油產品性能夠比市場上任何產品更好。</p>
+          <p>DP專業機油團隊的專業水準鱌國際標準看齊，專注研發和嚴格律己的態度，造就品牌的不同凡響。<br>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保值最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。<br>我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP專業機油絕不懈怠。DP專業機油產品性能夠比市場上任何產品更好。</p>
           <h2>DP所做的</h2>
           <p>DP專業機油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。
           <br>我們所做的 我們擁有國際的技術，台灣在地的產線，從原料、研發、量產、品管、包裝到出貨，完整的程序，達到最高品質及嚴格品管的最高原則，由網路行銷減少實體通路中被剝奪的利潤與不必要的成本，給顧客最直接的價格。
@@ -102,7 +102,7 @@
             <div class="col-12 col-md-2"><img src="./img/about/pic02.jpg" alt=""/></div>
             <div class="col-12 col-md-10">
               <h5>我們的專業</h5>
-              <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>  </div>
+              <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>  </div>
           </div>
         </div>
       </div>
@@ -127,7 +127,11 @@
                 <div class="card card-body">
                   <p class="ans_title">A2.</p>
                   <article class="ans">
-                    <p>保護能力較好、 高溫抗氧化能力強、比礦物油的使用壽命延長1-2倍、油品消耗少、使用溫度範圍廣，可用於極低和極高的環境溫度….等許多優點</p>
+                    <p>一、保護能力較好
+                    <br>二、高溫抗氧化能力強
+                    <br>三、比礦物油的使用壽命延長1-2倍
+                    <br>四、油品消耗少
+                    <br>五、使用溫度範圍廣，可用於極低和極高的環境溫度….等許多優點</p>
                   </article>
                 </div>
               </div>
@@ -138,13 +142,13 @@
             <div class="answer collapse" id="a3">               <div class="card card-body">
                 <p class="ans_title">A3.</p>
                 <article class="ans">
-                  <p>  發動機是屬於汽車的心臟，所以發動機則是汽車動力最重要的一個結構，然而發動機在運轉中會有許多相互摩擦的金屬零件，一個優秀的潤滑油可依照品質達到不同程度的降低發動機零件的磨損，延長使用壽命，優秀的潤滑油要擁有六大作用</p>
-                    <p>1、潤滑減磨：保護在發動機內部運轉中的金屬零件，要防止零件過快的磨損，則需要在兩個滑動的金屬表面間建立足夠的油膜。有足夠厚度的油膜將相對滑動的金屬零件表面隔開以及潤滑，來達到減少磨損的目的。</p>
-                    <p>2、冷卻降溫：機油會將運轉中產生的熱量帶回機油箱然後傳達至空氣中散熱幫助水箱快速冷卻發動機。</p>
-                    <p>3、清洗清潔：優秀的機油能將發動機金屬零件上的碳化物、油泥、磨損金屬顆粒等雜物通迴圈帶回機油箱，通過潤滑油的流動，來清洗金屬零件工在作面上產生的髒物。</p>
-                    <p>4、密封防漏：機油可以在活塞環與活塞之間形成一個密封圈，減少氣體的洩漏和防止外界的污染物進入。</p>
-                    <p>5、防銹防蝕：潤滑油能吸咐在金屬零件表面產生保護膜，防止水、空氣、酸性物質及有害氣體對零件的破壞。</p>
-                    <p>6、減震緩衝：發動機氣缸口壓力迅速上升時，會突然加劇活塞、活塞屑、連杆和曲軸軸承上的負荷，此時優秀的潤滑油在這時能產生傳遞功能軸承不被此負荷破壞，使承受的衝擊負荷達到緩衝減震的作用。</p>
+                    <p>發動機是屬於汽車的心臟，所以發動機則是動力系統中最重要的一個結構，然而發動機在運轉中會有許多相互摩擦的金屬零件，一個優秀的潤滑油可依照品質達到不同程度的降低發動機零件的磨損，延長使用壽命，優秀的潤滑油要擁有六大
+                    <br>一、潤滑減磨：保護在發動機內部運轉中的金屬零件，要防止零件過快的磨損，則需要在兩個滑動的金屬表面間建立足夠的油膜。有足夠厚度的油膜將相對滑動的金屬零件表面隔開以及潤滑，來達到減少磨損的目的。
+                    <br>二、冷卻降溫：機油會將運轉中產生的熱量帶回機油箱然後傳達至空氣中散熱幫助水箱快速冷卻發動機。
+                    <br>三、清洗清潔：優秀的機油能將發動機金屬零件上的碳化物、油泥、磨損金屬顆粒等雜物通迴圈帶回機油箱，通過潤滑油的流動，來清洗金屬零件工在作面上產生的髒物。
+                    <br>四、密封防漏：機油可以在活塞環與活塞之間形成一個密封圈，減少氣體的洩漏和防止外界的污染物進入。
+                    <br>五、防銹防蝕：潤滑油能吸咐在金屬零件表面產生保護膜，防止水、空氣、酸性物質及有害氣體對零件的破壞。
+                    <br>六、減震緩衝：發動機氣缸口壓力迅速上升時，會突然加劇活塞、活塞屑、連杆和曲軸軸承上的負荷，此時優秀的潤滑油在這時能產生傳遞功能軸承不被此負荷破壞，使承受的衝擊負荷達到緩衝減震的作用。</p>
 
                 </article>
               </div>
@@ -156,15 +160,15 @@
               <div class="card card-body">
                 <p class="ans_title">A4.</p>
                 <article class="ans">
-                  <p>一、低溫流動性較好，所以對冷車引擎保護性較為優秀，VI值高(VI值:因溫度變化而導致黏度改變的程度，越高越不容易改變)。</p>
-                    <p>二、產生的酸性物質最為少量。</p>
-                    <p>三、低摩擦性能，抗磨性能佳，可以使齒輪及軸承磨耗最少，達到更好的保護作用。</p>
-                    <p>四、在高溫下不易形成膠質漆與結碳，減少產生雜質。</p>
-                    <p>五、使用時間長久以後產品劣化時不易產生積垢或油泥等現象。</p>
-                    <p>六、氧化穩定度極佳，不易變質。</p>
-                    <p>七、低發揮性能，有較佳的高溫穩定性。</p>
-                    <p>八、添加劑溶解性極佳。</p>
-                    <p>九、高油膜強度、高熱氧化穩定性以及高剪力穩定性。</p>
+                    <p>一、低溫流動性較好，所以對冷車引擎保護性較為優秀，VI值高(VI值:因溫度變化而導致黏度改變的程度，越高越不容易改變)。</p>
+                    <br>二、產生的酸性物質最為少量。
+                    <br>三、低摩擦性能，抗磨性能佳，可以使齒輪及軸承磨耗最少，達到更好的保護作用。
+                    <br>四、在高溫下不易形成膠質漆與結碳，減少產生雜質。
+                    <br>五、使用時間長久以後產品劣化時不易產生積垢或油泥等現象。
+                    <br>六、氧化穩定度極佳，不易變質。
+                    <br>七、低發揮性能，有較佳的高溫穩定性。
+                    <br>八、添加劑溶解性極佳。
+                    <br>九、高油膜強度、高熱氧化穩定性以及高剪力穩定性。</p>
 
                 </article>
               </div>
@@ -180,9 +184,9 @@
       <div id="footer">
         <div class="content row">
           <div class="col-12 col-md-6">
-            <h4>DP機油商業原則</h4>
-            <p>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
-            <p>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
+            <h4>DP專業機油商業原則</h4>
+            <p>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。
+            <br>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP專業機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
           </div>
           <div class="col-12 col-md-6">
             <div class="row">
@@ -208,8 +212,8 @@
                 <div class="row">
                   <div class="col-12 col-md-4">
                     <h4>聯絡我</h4>
-                    <p>電話: 0958750564</p>
-                    <p>Line: dpmotoroil</p>
+                    <p>電話: 0958750564
+                    <br>Line: dpmotoroil</p>
                   </div>
                   <div class="col-6 col-md-4"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
                   <div class="col-6 col-md-4"><a href="https://www.facebook.com/DPMotorOil/"><img src="./img/about/facebook.png"/></a></div>
