--- a/index.html
+++ b/index.html
@@ -300,13 +300,15 @@
                 <h5 class="modal-title">{{card_data.data.title}}</h5>
                 <button class="close" type="button" data-dismiss="modal">&times</button>
               </div>
-              <div class="modal-body"><img :src="card_data.data_intro.img"/>
+              <div class="modal-body"><img :src="card_data.data_intro.img1"/>
+
                 <div class="intro_title">
                   <pre>{{card_data.data_intro.title}}</pre>
                 </div>
                 <div class="intro">
                   <pre>{{card_data.data_intro.intro}}</pre>
                 </div>
+
               </div>
               <div class="modal-footer">
                 <button class="close" type="button" data-dismiss="modal">Close</button>
