--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="display-4">DP專業機油</h1>
           <div class="p">
             <p class="lead">主打國際技術台灣在地研發、製造、包裝和品管統在地統一管理並接受客戶需求研發各種油化保養產品。</p>
-            <p class="lead">讓每一個消費者能真正使用到符合自己的好產品。            </p>
+            <p class="lead">讓每一個消費者能真正使用到符合自己的好產品。</p>
           </div><a class="btn btn-light" href="#product" onclick="start()"> <span>Continue</span></a>
         </div>
       </div>
@@ -256,7 +256,7 @@
                 <h4>Get in Touch</h4>
                 <div class="row pics">
                   <div class="col-3 col-md-3">
-                    <div class="card"><a href="https://www.facebook.com/DPMotorOil/"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
+                    <div class="card"><a href="https://shopee.tw/nich1648"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
                   </div>
                   <div class="col-3 col-md-3">
                     <div class="card"><a href="http://seller.pcstore.com.tw/S143157385"><img class="card-img-top" src="./img/footer/02.png" alt=""/></a></div>
@@ -300,7 +300,7 @@
                 <h5 class="modal-title">{{card_data.data.title}}</h5>
                 <button class="close" type="button" data-dismiss="modal">&times</button>
               </div>
-              <div class="modal-body"><img :src="card_data.data_intro.img1"/>
+              <div class="modal-body"><img :src="card_data.data_intro.img"/>
 
                 <div class="intro_title">
                   <pre>{{card_data.data_intro.title}}</pre>
