--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="product">
           <h1 class="title">產品介紹</h1>
           <div class="myframe container">
-            <iframe src="https://www.youtube.com/embed/pMyr4Cy0-No?ecver=2" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+            <iframe src="https://www.youtube.com/embed/NYClYNFxPHY" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
           </div>
           <div class="container">
             <div class="row">
