--- a/index.html
+++ b/index.html
@@ -254,17 +254,20 @@
             <div class="row">
               <div class="col-12 touch">
                 <h4>Get in Touch</h4>
-                <div class="row pics">
-                  <div class="col-3 col-md-3">
+                <div class="row justify-content-center pics">
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="https://shopee.tw/nich1648"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
                   </div>
-                  <div class="col-3 col-md-3">
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="http://seller.pcstore.com.tw/S143157385"><img class="card-img-top" src="./img/footer/02.png" alt=""/></a></div>
                   </div>
-                  <div class="col-3 col-md-3">
+                  <div class="col-4 col-md-2">
+                    <div class="card"><a href="http://www.pcstore.com.tw/nich1648/"><img class="card-img-top" src="./img/footer/06.png" alt=""/></a></div>
+                  </div>
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="http://class.ruten.com.tw/user/index00.php?s=nich1648"><img class="card-img-top" src="./img/footer/01.png" alt=""/></a></div>
                   </div>
-                  <div class="col-3 col-md-3">
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="https://tw.bid.yahoo.com/booth/Y7807992086?bfe=1"><img class="card-img-top" src="./img/footer/05.png" alt=""/></a></div>
                   </div>
                 </div>
@@ -300,8 +303,8 @@
                 <h5 class="modal-title">{{card_data.data.title}}</h5>
                 <button class="close" type="button" data-dismiss="modal">&times</button>
               </div>
-              <div class="modal-body"><img :src="card_data.data_intro.img"/>
-
+              <div class="modal-body">
+                <img :src="card_data.data_intro.img"/>
                 <div class="intro_title">
                   <pre>{{card_data.data_intro.title}}</pre>
                 </div>
