--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 </div>
               </div>
             </li>
+
             <li>
               <div class="quest"><a data-toggle="collapse" href="#qa_a2" role="button" aria-expanded="false" aria-controls="a2">Q2. 合成機油有什麼優點?</a></div>
               <div class="answer collapse" id="qa_a2">
@@ -205,8 +206,9 @@
                 </div>
               </div>
             </li>
+
             <li>
-              <div class="quest"><a data-toggle="collapse" href="#qa_a3" role="button" aria-expanded="false" aria-controls="a2">Q3. 機油對發動機的作用？</a></div>
+              <div class="quest"><a data-toggle="collapse" href="#qa_a3" role="button" aria-expanded="false" aria-controls="a3">Q3. 機油對發動機的作用？</a></div>
               <div class="answer collapse" id="qa_a3">
                 <div class="card card-body">
                   <p class="ans_title">A3.</p>
@@ -229,7 +231,7 @@
               </div>
             </li>
             <li>
-              <div class="quest"><a data-toggle="collapse" href="#qa_a4" role="button" aria-expanded="false" aria-controls="a2">Q4. 酯類(ESTER)機油的優點?</a></div>
+              <div class="quest"><a data-toggle="collapse" href="#qa_a4" role="button" aria-expanded="false" aria-controls="a4">Q4. 酯類(ESTER)機油的優點?</a></div>
               <div class="answer collapse" id="qa_a4">
                 <div class="card card-body">
                   <p class="ans_title">A4.</p>
@@ -247,6 +249,22 @@
                 </div>
               </div>
             </li>
+            <li>
+              <div class="quest"><a data-toggle="collapse" href="#qa_a5" role="button" aria-expanded="false" aria-controls="a5">Q5. 性狀表如何看?</a></div>
+              <div class="answer collapse" id="qa_a5">
+                <div class="card card-body">
+                  <p class="ans_title">A5.</p>
+                  <article class="ans">
+                    <p><br>一、Viscosity@40°C動黏度：<br>  在40°C下機油的流動率。
+                       <br>二、Viscosity@100°C動黏度：<br>   在100°C下機油的流動率。
+                       <br>三、Viscosity lndex(VI)黏度指數：<br>  VI值越高，機油在引擎高溫運作下的穩定性就越好,所以VI值越高越好。
+                       <br>四、Cold Cranking Simulator (CCS)：<br>  使用低溫模擬驅動裝置在-5和-30℃之間的發動機油表觀黏度的試驗方法。本標準規定在實驗室內以高剪速率測定車用機油在-5到-30℃間的視黏度。此數據相關於機油在引擎驅動的性能。
+                       <br>五、High Temperature High Shear Viscosity(HTHS)：<br>  機油的性能不只與低溫下的黏度有關，而且還與其在高溫下的黏度也有關係。
+                       由於多級油是非牛頓液體，因此在發動機情況下（150℃，剪切率10%）， 機油黏度在高溫下具有重要意義，故提出高溫高剪切黏度，簡稱HTHS(High Temperature High Shear)黏度。一般情況下，高溫高剪切黏度越高越好。 </p>
+                  </article>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
@@ -255,8 +273,8 @@
         <div class="content row">
           <div class="col-12 col-md-6">
             <h4>DP機油商業原則</h4>
-            <p>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
-            <p>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
+            <h5>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</h5>
+            <h5>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</h5>
           </div>
           <div class="col-12 col-md-6">
             <div class="row">
@@ -284,8 +302,8 @@
                 <div class="row">
                   <div class="col-12 col-md-4">
                     <h4>聯絡我</h4>
-                    <p>電話: 0958750564</p>
-                    <p>Line: dpmotoroil</p>
+                    <h5>電話: 0958750564</h5>
+                    <h5>Line: dpmotoroil</h5>
                   </div>
                   <div class="col-6 col-md-4"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
                   <div class="col-6 col-md-4"><a href="https://www.facebook.com/DPMotorOil/"><img src="./img/about/facebook.png"/></a></div>
