--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="right"></div>
       </div>
     </div>
+    <!------------------------------------------------------------>
     <div class="container" id="nav">
       <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top"><a class="navbar-brand sitename" href="#home" onclick="home()">DPMotorOil</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlist" aria-controls="navlist" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
@@ -42,21 +43,25 @@
         </div>
       </nav>
     </div>
+    <!------------------------------------------------------------>
     <div id="main">
+      <!------------------------------------------------------------>
       <div id="home">
         <div class="cover"><img src="./img/DP.png"/>
           <h1 class="display-4">DP專業機油</h1>
           <div class="p">
             <p class="lead">主打國際技術台灣在地研發、製造、包裝和品管統在地統一管理並接受客戶需求研發各種油化保養產品。</p>
-            <p class="lead">讓每一個消費者能真正使用到符合自己的好產品。            </p>
+            <p class="lead">讓每一個消費者能真正使用到符合自己的好產品。</p>
           </div><a class="btn btn-light" href="#product" onclick="start()"> <span>Continue</span></a>
         </div>
       </div>
+      <!------------------------------------------------------------>
       <div id="app">
+        <!--product-->
         <div id="product">
           <h1 class="title">產品介紹</h1>
           <div class="myframe container">
-            <iframe src="https://www.youtube.com/embed/pMyr4Cy0-No?ecver=2" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+            <iframe src="https://www.youtube.com/embed/NYClYNFxPHY" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
           </div>
           <div class="container">
             <div class="row">
@@ -68,6 +73,7 @@
             </div>
           </div>
         </div>
+        <!--experiment-->
         <div id="experiment">
           <h1 class="title">實驗室介紹</h1>
           <div class="container">
@@ -80,35 +86,34 @@
             </div>
           </div>
         </div>
+        <!--recommend-->
         <div id="recommend">
           <h1 class="title">推薦</h1>
           <div class="container">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-3 col-6" v-for="card in cards.card_recommend">
-                  <div class="card">
-                    <card v-bind:card_data="card"></card>
-                  </div>
+            <div class="row">
+              <div class="col-md-3 col-6" v-for="card in cards.card_recommend">
+                <div class="card">
+                  <card v-bind:card_data="card"></card>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <!--proof-->
         <div id="proof">
           <h1 class="title">產品數據</h1>
           <div class="container">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-3 col-6" v-for="card in cards.card_proof">
-                  <div class="card">
-                    <card v-bind:card_data="card"></card>
-                  </div>
+            <div class="row">
+              <div class="col-md-3 col-6" v-for="card in cards.card_proof">
+                <div class="card">
+                  <card v-bind:card_data="card"></card>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!------------------------------------------------------------>
       <div id="about">
         <h1 class="title">關於DP</h1>
         <div class="content">
@@ -154,6 +159,7 @@
           </div>
         </div>
       </div>
+      <!------------------------------------------------------------>
       <div id="act">
         <h1 class="title">活動與促銷</h1>
         <div class="content">
@@ -172,6 +178,7 @@
           </ul>
         </div>
       </div>
+      <!------------------------------------------------------------>
       <div id="QA">
         <h1 class="title">Q&A</h1>
         <div class="content">
@@ -187,6 +194,7 @@
                 </div>
               </div>
             </li>
+
             <li>
               <div class="quest"><a data-toggle="collapse" href="#qa_a2" role="button" aria-expanded="false" aria-controls="a2">Q2. 合成機油有什麼優點?</a></div>
               <div class="answer collapse" id="qa_a2">
@@ -199,7 +207,7 @@
               </div>
             </li>
             <li>
-              <div class="quest"><a data-toggle="collapse" href="#qa_a3" role="button" aria-expanded="false" aria-controls="a2">Q3. 機油對發動機的作用？</a></div>
+              <div class="quest"><a data-toggle="collapse" href="#qa_a3" role="button" aria-expanded="false" aria-controls="a3">Q3. 機油對發動機的作用？</a></div>
               <div class="answer collapse" id="qa_a3">
                 <div class="card card-body">
                   <p class="ans_title">A3.</p>
@@ -222,7 +230,7 @@
               </div>
             </li>
             <li>
-              <div class="quest"><a data-toggle="collapse" href="#qa_a4" role="button" aria-expanded="false" aria-controls="a2">Q4. 酯類(ESTER)機油的優點?</a></div>
+              <div class="quest"><a data-toggle="collapse" href="#qa_a4" role="button" aria-expanded="false" aria-controls="a4">Q4. 酯類(ESTER)機油的優點?</a></div>
               <div class="answer collapse" id="qa_a4">
                 <div class="card card-body">
                   <p class="ans_title">A4.</p>
@@ -240,41 +248,61 @@
                 </div>
               </div>
             </li>
+            <li>
+              <div class="quest"><a data-toggle="collapse" href="#qa_a5" role="button" aria-expanded="false" aria-controls="a5">Q5. 性狀表如何看?</a></div>
+              <div class="answer collapse" id="qa_a5">
+                <div class="card card-body">
+                  <p class="ans_title">A5.</p>
+                  <article class="ans">
+                    <p><br>一、Viscosity@40°C動黏度：<br>  在40°C下機油的流動率。
+                       <br>二、Viscosity@100°C動黏度：<br>   在100°C下機油的流動率。
+                       <br>三、Viscosity lndex(VI)黏度指數：<br>  VI值越高，機油在引擎高溫運作下的穩定性就越好,所以VI值越高越好。
+                       <br>四、Cold Cranking Simulator (CCS)：<br>  使用低溫模擬驅動裝置在-5和-30℃之間的發動機油表觀黏度的試驗方法。本標準規定在實驗室內以高剪速率測定車用機油在-5到-30℃間的視黏度。此數據相關於機油在引擎驅動的性能。
+                       <br>五、High Temperature High Shear Viscosity(HTHS)：<br>  機油的性能不只與低溫下的黏度有關，而且還與其在高溫下的黏度也有關係。
+                       由於多級油是非牛頓液體，因此在發動機情況下（150℃，剪切率10%）， 機油黏度在高溫下具有重要意義，故提出高溫高剪切黏度，簡稱HTHS(High Temperature High Shear)黏度。一般情況下，高溫高剪切黏度越高越好。 </p>
+                  </article>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
+      <!------------------------------------------------------------>
       <div id="footer">
         <div class="content row">
           <div class="col-12 col-md-6">
             <h4>DP機油商業原則</h4>
-            <p>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
-            <p>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
+            <h5>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</h5>
+            <h5>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</h5>
           </div>
           <div class="col-12 col-md-6">
             <div class="row">
               <div class="col-12 touch">
                 <h4>Get in Touch</h4>
-                <div class="row pics">
-                  <div class="col-3 col-md-3">
-                    <div class="card"><a href="https://www.facebook.com/DPMotorOil/"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
+                <div class="row justify-content-center pics">
+                  <div class="col-4 col-md-2">
+                    <div class="card"><a href="https://shopee.tw/nich1648"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
                   </div>
-                  <div class="col-3 col-md-3">
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="http://seller.pcstore.com.tw/S143157385"><img class="card-img-top" src="./img/footer/02.png" alt=""/></a></div>
                   </div>
-                  <div class="col-3 col-md-3">
+                  <div class="col-4 col-md-2">
+                    <div class="card"><a href="http://www.pcstore.com.tw/nich1648/"><img class="card-img-top" src="./img/footer/06.png" alt=""/></a></div>
+                  </div>
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="http://class.ruten.com.tw/user/index00.php?s=nich1648"><img class="card-img-top" src="./img/footer/01.png" alt=""/></a></div>
                   </div>
-                  <div class="col-3 col-md-3">
+                  <div class="col-4 col-md-2">
                     <div class="card"><a href="https://tw.bid.yahoo.com/booth/Y7807992086?bfe=1"><img class="card-img-top" src="./img/footer/05.png" alt=""/></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-12 contact">
                 <div class="row">
-                  <div class="col-12 col-md-4">
+                  <div class="col-12 col-md-3">
                     <h4>聯絡我</h4>
-                    <p>電話: 0958750564</p>
-                    <p>Line: dpmotoroil</p>
+                    <h5>電話: 0958750564</h5>
+                    <h5>Line: dpmotoroil</h5>
                   </div>
                   <div class="col-6 col-md-4"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
                   <div class="col-6 col-md-4"><a href="https://www.facebook.com/DPMotorOil/"><img src="./img/about/facebook.png"/></a></div>
@@ -286,6 +314,9 @@
         <div class="end"><a href="https://www.facebook.com/DPMotorOil/">2018 Copyright © DPMotorOil All Rights Reserved.Design by Taiwan Products</a></div>
       </div>
     </div>
+    <!------------------------------------------------------------>
+    <!------------------------------------------------------------>
+    <!------------------------------------------------------------>
     <template id="card">
       <div class="card_container"><a data-toggle="modal" :data-target="card_data.target"><img class="card-img-top" :src="card_data.data.img"/>
           <div class="card-body">
@@ -300,8 +331,8 @@
                 <h5 class="modal-title">{{card_data.data.title}}</h5>
                 <button class="close" type="button" data-dismiss="modal">&times</button>
               </div>
-              <div class="modal-body"><img :src="card_data.data_intro.img1"/>
-
+              <div class="modal-body">
+                <img :src="card_data.data_intro.img"/>
                 <div class="intro_title">
                   <pre>{{card_data.data_intro.title}}</pre>
                 </div>
