--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <div class="cover"><img src="./img/DP.png"/>
           <h1 class="display-4">DP專業機油</h1>
           <div class="p">
-            <p class="lead">主打國際技術台灣在地研發、製造、包裝和品管統在地統一管理並接受客戶需求研發各種油化保養產品。</p>
-            <p class="lead">讓每一個消費者能真正使用到符合自己的好產品。</p>
+            <p class="lead">主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p>
+            <p class="lead">添加劑堅持與國際添加劑公司合作，一、路博潤（Lubrizol）二、潤英聯（Infineum）三、雅富頓（Afton），三家國際大廠合作。</p>
+            <p class="lead">基礎油堅持使用台朔集團生產。</p>
           </div><a class="btn btn-light" href="#product" onclick="start()"> <span>Continue</span></a>
         </div>
       </div>
@@ -165,12 +166,12 @@
         <div class="content">
           <ul class="px-1 px-md-5">
             <li>
-              <div class="quest"><a data-toggle="collapse" href="#act_a1" role="button" aria-expanded="false" aria-controls="a1">開幕特惠(買越多省越多)</a></div>
+              <div class="quest"><a data-toggle="collapse" href="#act_a1" role="button" aria-expanded="false" aria-controls="a1">開幕特惠</a></div>
               <div class="answer collapse" id="act_a1">
                 <div class="card card-body">
                   <p class="ans_title">開幕特惠</p>
                   <article class="ans">
-                    <p><br>3-4瓶97折<br>5-6瓶95折<br>7-9瓶92折<br>1箱9折($450元/瓶)<br>2相88折($440元/瓶)<br>3箱72瓶85折($425元/瓶)</p>
+                    <p><br>建議售價500元 <br>開幕特價350元 <br>1箱四瓶 <br>1箱97折(340/瓶)<br>2箱95折(333/瓶)<br>3箱92折(322/瓶)<br>4箱9折(315元/瓶)<br>6箱88折($308元/瓶)</p>
                   </article>
                 </div>
               </div>
@@ -194,7 +195,6 @@
                 </div>
               </div>
             </li>
-
             <li>
               <div class="quest"><a data-toggle="collapse" href="#qa_a2" role="button" aria-expanded="false" aria-controls="a2">Q2. 合成機油有什麼優點?</a></div>
               <div class="answer collapse" id="qa_a2">
