--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="card card-body">
                   <p class="ans_title">開幕特惠</p>
                   <article class="ans">
-                    <p><br>建議售價500元 <br>開幕特價350元 <br>1箱四瓶 <br>1箱97折(340/瓶)<br>2箱95折(333/瓶)<br>3箱92折(322/瓶)<br>4箱9折(315元/瓶)<br>6箱88折($308元/瓶)</p>
+                    <p><br>建議售價500元/瓶 <br>1箱四瓶 <br>開幕特價350元/瓶  <br>1箱97折(340/瓶)<br>2箱95折(333/瓶)<br>3箱92折(322/瓶)<br>4箱9折(315元/瓶)<br>6箱88折($308元/瓶)</p>
                   </article>
                 </div>
               </div>
