--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <h4>Get in Touch</h4>
                 <div class="row justify-content-center pics">
                   <div class="col-4 col-md-2">
-                    <div class="card"><a href="https://shopee.tw/nich1648"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
+                    <div class="card"><a href="https://shopee.tw/DPMotorOil"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
                   </div>
                   <div class="col-4 col-md-2">
                     <div class="card"><a href="http://seller.pcstore.com.tw/S143157385"><img class="card-img-top" src="./img/footer/02.png" alt=""/></a></div>
