--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li class="nav-item"><a class="nav-link" href="#experiment" onclick="fn(1)">實驗室</a></li>
             <li class="nav-item"><a class="nav-link" href="#sale" onclick="fn(3)">活動與促銷</a></li>
             <li class="nav-item"><a class="nav-link" href="#recommend" onclick="fn(5)">推薦</a></li>
+            <li class="nav-item"><a class="nav-link" href="#story" onclick="fn(7)">品牌故事</a></li>
             <li class="nav-item"><a class="nav-link" href="#QA" onclick="fn(4)">Q&A</a></li>
             <li class="nav-item"><a class="nav-link" href="#about" onclick="fn(2)">關於DP</a></li>
           </ul>
@@ -157,6 +158,27 @@
           <div class="col-12 col-md-10">
             <h5>我們的專業</h5>
             <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
+          </div>
+        </div>
+      </div>
+      <!------------------------------------------------------------>
+      <div id="story">
+        <h1 class="title">品牌故事</h1>
+
+        <div class="mycol row">
+          <div class="col-12 col-md-2"><img src="./img/about/DP.png" alt=""/></div>
+          <div class="col-12 col-md-10">
+            <h5>DP</h5>
+            <p></p>
+            <hr/>
+          </div>
+          <div class="col-12 col-md-2"><img src="./img/about/DELTEC.png" alt=""/></div>
+          <div class="col-12 col-md-10">
+            <h5>DELTEC</h5>
+            <p>DELTEC機油的製造商，民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？
+              <br>我們深入了解後才知道，原來當時許多車輛其實都是超載的，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。
+              <br>為此，我們在當時與全世界最大的添加劑廠商路博潤Lubrizol Advanced Materials技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。
+              <br>經過時間的推移，公司成立至今已走過了20個年頭，目前主要業務可分為工業用油與汽機車用油兩大類，並提供各式機油OEM與ODM，或依客戶的需求研發各類車用油化保養品等；我們是在地的MIT品牌，未來的目標是將MIT的機油推向世界各地，讓全世界知道台灣是擁有這個技術的！</p>
           </div>
         </div>
       </div>
