--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="cover"><img src="./img/DP.png"/>
           <h1 class="display-4">DP專業機油</h1>
           <div class="p">
-            <p class="lead">主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p>
-            <p class="lead">添加劑堅持與國際添加劑公司合作，一、路博潤（Lubrizol）二、潤英聯（Infineum）三、雅富頓（Afton），三家國際大廠合作。</p>
-            <p class="lead">基礎油堅持使用台朔集團生產。</p>
+            <p >主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p>
+            <p >添加劑堅持與國際添加劑公司合作，一、路博潤（Lubrizol）二、潤英聯（Infineum）三、雅富頓（Afton），三家國際大廠合作。</p>
+            <p >基礎油堅持使用台朔集團生產。</p>
           </div><a class="btn btn-light" href="#product" onclick="start()"> <span>Continue</span></a>
         </div>
       </div>
@@ -321,13 +321,13 @@
               </div>
               <div class="col-12 contact">
                 <div class="row">
-                  <div class="col-12 col-md-3">
+                  <div class="col-12 col-md-4">
                     <h4>聯絡我</h4>
                     <h5>電話: 0958750564</h5>
                     <h5>Line: dpmotoroil</h5>
                   </div>
-                  <div class="col-6 col-md-4"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
-                  <div class="col-6 col-md-4"><a href="https://www.facebook.com/DPMotorOil/"><img src="./img/about/facebook.png"/></a></div>
+                  <div class="col-6 col-md-3"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
+                  <div class="col-6 col-md-3"><a href="https://www.facebook.com/DPMotorOil/"><img src="./img/about/facebook.png"/></a></div>
                 </div>
               </div>
             </div>
