--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="cover"><img src="./img/DP.png"/>
           <h1 class="display-4">DP專業機油</h1>
           <div class="p">
-            <div style="text-align:center;"><p>主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p></div>
-            <div style="text-align:center;"><p>添加劑堅持與國際添加劑大廠合作，一、路博潤（Lubrizol）二、潤英聯（Infineum）三、雅富頓（Afton），三家國際大廠合作。</p></div>
-            <div style="text-align:center;"><p>基礎油堅持使用台朔集團生產。</p></div>
+            <p>主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p>
+            <p>添加劑堅持與國際添加劑大廠合作，一、路博潤（Lubrizol）二、潤英聯（Infineum）三、雅富頓（Afton），三家國際大廠合作。</p>
+            <p>基礎油堅持使用台朔集團生產。</p>
           </div><a class="btn btn-light" href="#product" onclick="start()"> <span>Continue</span></a>
         </div>
       </div>
