--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <li class="nav-item"><a class="nav-link" href="#proof" onclick="fn(6)">產品數據</a></li>
             <li class="nav-item"><a class="nav-link" href="#experiment" onclick="fn(1)">實驗室</a></li>
             <li class="nav-item"><a class="nav-link" href="#sale" onclick="fn(3)">活動與促銷</a></li>
-            <li class="nav-item"><a class="nav-link" href="#recommend" onclick="fn(5)">推薦</a></li>
+            <!--<li class="nav-item"><a class="nav-link" href="#recommend" onclick="fn(5)">推薦</a></li>-->
             <li class="nav-item"><a class="nav-link" href="#story" onclick="fn(7)">品牌故事</a></li>
-            <li class="nav-item"><a class="nav-link" href="#QA" onclick="fn(4)">Q&A</a></li>
             <li class="nav-item"><a class="nav-link" href="#about" onclick="fn(2)">關於DP</a></li>
+            <li class="nav-item"><a class="nav-link" href="#QA" onclick="fn(4)">Q&A</a></li>
           </ul>
         </div>
       </nav>
@@ -145,43 +145,40 @@
           <p>我們的策略 我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，甚至超越，成就台灣製造不輸國際品牌之能力。</p>
           <p>我們的優勢 我們的主要優勢包括先進的技術開發和完整的產線，允許我們提供個人化開發項目，創造出與別人不同的價值。 </p>
           <p>綜合以上論點，我們能用最低的價格，做出最好的產品，盡量節省一切不必要的成本以及浪費，給予顧客CP值最高的價格，因為從研發到出貨都是統一管理，所以可以做到品質保證。                  </p>
-        </div>
-        <div class="mycol row">
-          <div class="col-12 col-md-2"><img src="./img/about/DP.png" alt=""/></div>
-          <div class="col-12 col-md-10">
-            <h5>我們的堅持</h5>
-            <p>DP專業機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。 </p>
-            <p>我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
-            <hr/>
-          </div>
-          <div class="col-12 col-md-2"><img src="./img/about/DELTEC.png" alt=""/></div>
-          <div class="col-12 col-md-10">
-            <h5>我們的專業</h5>
-            <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
-          </div>
+          </hr>
+          <h3>我們的堅持</h3>
+          <p>DP專業機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。 </p>
+          <p>我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
+          </hr>
+          <h3>我們的專業</h3>
+          <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
         </div>
       </div>
       <!------------------------------------------------------------>
       <div id="story">
-        <h1 class="title">品牌故事</h1>
-
-        <div class="mycol row">
-          <div class="col-12 col-md-2"><img src="./img/about/DP.png" alt=""/></div>
-          <div class="col-12 col-md-10">
-            <h5>DP</h5>
-            <p></p>
-            <hr/>
-          </div>
-          <div class="col-12 col-md-2"><img src="./img/about/DELTEC.png" alt=""/></div>
-          <div class="col-12 col-md-10">
-            <h5>DELTEC</h5>
-            <p>&nbsp;  &nbsp; &nbsp;  &nbsp; DELTEC機油的製造商，民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？
-              <br> &nbsp;  &nbsp;&nbsp;  &nbsp;  我們深入了解後才知道，原來當時許多車輛其實都是超載的，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。
-              <br> &nbsp;  &nbsp;&nbsp;  &nbsp;  為此，我們在當時與全世界最大的添加劑廠商路博潤Lubrizol Advanced Materials技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。
-              <br> &nbsp;  &nbsp;&nbsp;  &nbsp;  經過時間的推移，公司成立至今已走過了20個年頭，目前主要業務可分為工業用油與汽機車用油兩大類，並提供各式機油OEM與ODM，或依客戶的需求研發各類車用油化保養品等；我們是在地的MIT品牌，未來的目標是將MIT的機油推向世界各地，讓全世界知道台灣是擁有這個技術的！</p>
-          </div>
+        <h1 class="title">關於DP</h1>
+        <div class="content">
+          <h2>DELTEC品牌故事</h2>
+          <p> DELTEC，是台灣石化工業與行銷學的集大成之作；2018年3月由幾個年輕新創團隊所創立的品牌，團隊成員的平均年齡不超過30歲，其目的是要以網路通路，向世界宣告台灣其實是擁有這個機油製造技術的！</p>
+          <p>為何我們選擇DELTEC這個當作Logo？其實，他裡面每個字皆有其所代表的意義，分別是：</p>
+          <p>Declare：我們向世界宣告這個品牌的誕生。</p>
+          <p>Economical：意味這產品的價格經濟實惠，是可以讓社會大眾接受的。</p>
+          <p>Lasting：以實驗數據來告訴大家這款機油其實是很持久並耐用的。</p>
+          <p>Taiwan：該品牌與團隊是從台灣發跡，並且百分之百在地生產。</p>
+          <p>Elaborate：集台灣石化工業與產品行銷學之精華，一個屬於我們精心製作的作品。</p>
+          <p>Category：這是一個新的世代、新的範疇。</p>
+          <p>作為在地的Made In Taiwan品牌，我們團隊深入雲林斗六擴大工業區，找到了擁有20年以上經驗的專業機油滲配廠來進行生產；他們擁有專業的石油化學檢測實驗室Petrochemical Testing Laboratory，能夠做到即時生產、即時品質檢測與管理；我們，誓言要帶給大家最棒的產品！</p>
+         </h5>
+          <h2>製造商介紹</h2>
+          <p>民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？
+            我們深入了解後才知道，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。</p>
+            <p>為此，我們在當時與全世界最大的添加劑廠商路博潤（Lubrizol）技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。
+            經過時間的推移，公司成立至今已走過了20幾個年頭，目前合作的添加劑廠商除了最早的路博潤（Lubrizol）以外，現在更多了潤英聯（Infineum）、雅富頓（Afton），而雪佛龍（Chevron Oronite）近期則是還在洽談當中。</p>
+            <p>目前公司的主要營業項目可分為工業用油與汽機車用油兩大類，並提供各式油品的OEM與ODM；我們也因確實落實的執行品質檢測與管理，設有石油化學檢測實驗室Petrochemical Testing Laboratory，以檢測工業用油與汽機車用油，其檢測項目有Flash Point、TBN（Total Base Number）、VI（Viscosity lndex）、CCS（Cold Cranking Simulator）、HTHS（High Temperature High Shear Viscosity）等等，若有相關問題，歡迎致電05-557-6016。
+        </p>
         </div>
       </div>
+
       <!------------------------------------------------------------>
       <div id="act">
         <h1 class="title">活動與促銷</h1>
