--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width， initial-scale=1"/>
     <link rel="shortcut icon" href="./img/icon/icon.png"/>
     <!--font-awesome 5.0.8-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous"/>
@@ -119,63 +119,64 @@
       <div id="about">
         <h1 class="title">關於DP</h1>
         <div class="content">
-          <h3>DP專業機油特殊優勢</h3>
-          <p>別人進口機油,我們進口技術,別人派送專員勘查進口商,我們派送技術員與國際大廠研發技術,別人進口的是產品,我們去交流的是技術,擁有國際的技術,進口國際原料大廠,在地製造生產,過程全程監督,別人可以抽查前做足準備,我們永遠都在監督下做足品質。 </p>
+          <h2><b>DP專業機油特殊優勢</b></h2>
+          <p>　　別人進口機油，我們進口技術，別人派送專員勘查進口商，我們派送技術員與國際大廠研發技術，別人進口的是產品，我們去交流的是技術，擁有國際的技術，進口國際原料大廠，在地製造生產，過程全程監督，別人可以抽查前做足準備，我們永遠都在監督下做足品質。 </p>
           <hr/>
-          <h3>DP專業機油最終目標</h3>
-          <p>DP專業機油與台灣在地專業製造商合作，以及我們自身專業且完善的實驗室，來做到更優良的產品，來超越各種進口機油，以及台灣在地其他品牌，成為最專業的機油製造團隊，打造最強大的機油品牌</p>
+          <h2><b>DP專業機油最終目標</b></h2>
+          <p>　　DP專業機油與台灣在地專業製造商合作，以及我們自身專業且完善的實驗室，來做到更優良的產品，來超越各種進口機油，以及台灣在地其他品牌，成為最專業的機油製造團隊，打造最強大的機油品牌。</p>
           <hr/>
-          <h3>DP推陳出新</h3>
-          <p>DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。DP專業機油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
+          <h2><b>DP推陳出新</b></h2>
+          <p>　　DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。DP專業機油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
           <hr/>
-          <h3>DP專業機油核心價值</h3>
-          <h5>TECHNOLOGY</h5>
-          <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用自身嚴格把關和挑選國際級原物料,來創造最高品質的產品，在這方面的品質DP專業機油絕不怠惰。DP專業機油的產品性能，比市場上任何產品更好更優良。</p>
-          <h5>REATION</h5>
-          <p>DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。</p>
-          <h5>COMMITMENT</h5>
-          <p>DP專業機油團隊的專業水準鱌國際標準看齊，專注研發和嚴格律己的態度，造就品牌的不同凡響。</p>
-          <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保值最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。</p>
-          <p>我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP專業機油絕不懈怠。DP專業機油產品性能夠比市場上任何產品更好。</p>
+          <h2><b>DP專業機油核心價值</b></h2>
+          <h4><b>TECHNOLOGY</b></h4>
+          <p>　　們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用自身嚴格把關和挑選國際級原物料，來創造最高品質的產品，在這方面的品質DP專業機油絕不怠惰。DP專業機油的產品性能，比市場上任何產品更好更優良。</p>
+          <br>
+          <h4><b>REATION</b></h4>
+          <p>　　DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。</p>
+          <br>
+          <h4><b>COMMITMENT</b></h4>
+          <p>　　DP專業機油團隊的專業水準向國際標準看齊，專注研發和嚴以律己的態度，造就品牌的不同凡響。</p>
+          <p><br>　　➤我們認為在任何一個市場的顧客，都能得到最好的照顧。</br></p>
+          <p>　　➤我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保值最佳品質。</p>
+          <p>　　➤我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP專業機油絕不懈怠。</p>
+          <p><br>　　DP專業機油產品性能夠比市場上任何產品更好。</br></p>
           <hr/>
-          <h3>DP所做的</h3>
-          <p>DP專業機油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。</p>
-          <p>我們所做的 我們擁有國際的技術，台灣在地的產線，從原料、研發、量產、品管、包裝到出貨，完整的程序，達到最高品質及嚴格品管的最高原則，由網路行銷減少實體通路中被剝奪的利潤與不必要的成本，給顧客最直接的價格。 </p>
-          <p>我們的戰略 我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。 </p>
-          <p>我們的策略 我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，甚至超越，成就台灣製造不輸國際品牌之能力。</p>
-          <p>我們的優勢 我們的主要優勢包括先進的技術開發和完整的產線，允許我們提供個人化開發項目，創造出與別人不同的價值。 </p>
-          <p>綜合以上論點，我們能用最低的價格，做出最好的產品，盡量節省一切不必要的成本以及浪費，給予顧客CP值最高的價格，因為從研發到出貨都是統一管理，所以可以做到品質保證。                  </p>
-          </hr>
-          <h3>我們的堅持</h3>
-          <p>DP專業機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。 </p>
-          <p>我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
-          </hr>
-          <h3>我們的專業</h3>
-          <p>我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
+          <h2><b>DP所做的</b></h2>
+          <p>　　DP專業機油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。</p>
+          <p><br>　　➤我們的價格：我們擁有國際的技術，台灣在地的產線，從原料、研發、量產、品管、包裝到出貨，完整的程序，達到最高品質及嚴格品管的最高原則，由網路行銷減少實體通路中被剝奪的利潤與不必要的成本，給顧客最直接的價格。</br></p>
+          <p>　　➤我們的戰略：我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。 </p>
+          <p>　　➤我們的策略：我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，甚至超越，成就台灣製造不輸國際品牌之能力。</p>
+          <p>　　➤我們的優勢：我們的主要優勢包括先進的技術開發和完整的產線，允許我們提供個人化開發項目，創造出與別人不同的價值。 </p>
+          <p><br>　　綜合以上論點，我們能用最低的價格，做出最好的產品，盡量節省一切不必要的成本以及浪費，給予顧客CP值最高的價格，因為從研發到出貨都是統一管理，所以可以做到品質保證。</br></p>
+          <hr/>
+          <h2><b>DP的堅持</b></h2>
+          <p>　　DP專業機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
+          <hr/>
+          <h2><b>DP的專業</b></h2>
+          <p>　　我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
         </div>
       </div>
       <!------------------------------------------------------------>
       <div id="story">
         <h1 class="title">關於DP</h1>
         <div class="content">
-          <h2>DELTEC品牌故事</h2>
-          <p> DELTEC，是台灣石化工業與行銷學的集大成之作；2018年3月由幾個年輕新創團隊所創立的品牌，團隊成員的平均年齡不超過30歲，其目的是要以網路通路，向世界宣告台灣其實是擁有這個機油製造技術的！</p>
-          <p>為何我們選擇DELTEC這個當作Logo？其實，他裡面每個字皆有其所代表的意義，分別是：</p>
-          <p>Declare：我們向世界宣告這個品牌的誕生。</p>
-          <p>Economical：意味這產品的價格經濟實惠，是可以讓社會大眾接受的。</p>
-          <p>Lasting：以實驗數據來告訴大家這款機油其實是很持久並耐用的。</p>
-          <p>Taiwan：該品牌與團隊是從台灣發跡，並且百分之百在地生產。</p>
-          <p>Elaborate：集台灣石化工業與產品行銷學之精華，一個屬於我們精心製作的作品。</p>
-          <p>Category：這是一個新的世代、新的範疇。</p>
-          <p>作為在地的Made In Taiwan品牌，我們團隊深入雲林斗六擴大工業區，找到了擁有20年以上經驗的專業機油滲配廠來進行生產；他們擁有專業的石油化學檢測實驗室Petrochemical Testing Laboratory，能夠做到即時生產、即時品質檢測與管理；我們，誓言要帶給大家最棒的產品！</p>
-         </h5>
-          <h2>製造商介紹</h2>
-          <p>民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？
-            我們深入了解後才知道，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。</p>
-            <p>為此，我們在當時與全世界最大的添加劑廠商路博潤（Lubrizol）技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。
-            經過時間的推移，公司成立至今已走過了20幾個年頭，目前合作的添加劑廠商除了最早的路博潤（Lubrizol）以外，現在更多了潤英聯（Infineum）、雅富頓（Afton），而雪佛龍（Chevron Oronite）近期則是還在洽談當中。</p>
-            <p>目前公司的主要營業項目可分為工業用油與汽機車用油兩大類，並提供各式油品的OEM與ODM；我們也因確實落實的執行品質檢測與管理，設有石油化學檢測實驗室Petrochemical Testing Laboratory，以檢測工業用油與汽機車用油，其檢測項目有Flash Point、TBN（Total Base Number）、VI（Viscosity lndex）、CCS（Cold Cranking Simulator）、HTHS（High Temperature High Shear Viscosity）等等，若有相關問題，歡迎致電05-557-6016。
-        </p>
+          <h2><b>DELTEC品牌故事</b></h2>
+          <p>　　DELTEC，是台灣石化工業與行銷學的集大成之作；2018年3月由幾個年輕新創團隊所創立的品牌，團隊成員的平均年齡不超過30歲，其目的是要以網路通路，向世界宣告台灣其實是擁有這個機油製造技術的！</p>
+          <p><br>　　為何我們選擇DELTEC這個當作Logo？其實，他裡面每個字皆有其所代表的意義，分別是：</br></p>
+          <p><br>　　➤Declare：我們向世界宣告這個品牌的誕生。</br></p>
+          <p>　　➤Economical：意味這產品的價格經濟實惠，是可以讓社會大眾接受的。</p>
+          <p>　　➤Lasting：以實驗數據來告訴大家這款機油其實是很持久並耐用的。</p>
+          <p>　　➤Taiwan：該品牌與團隊是從台灣發跡，並且百分之百在地生產。</p>
+          <p>　　➤Elaborate：集台灣石化工業與產品行銷學之精華，一個屬於我們精心製作的作品。</p>
+          <p>　　➤Category：這是一個新的世代、新的範疇。</p>
+          <p><br>　　作為在地的Made In Taiwan品牌，我們團隊深入雲林斗六擴大工業區，找到了擁有20年以上經驗的專業機油滲配廠來進行生產；他們擁有專業的石油化學檢測實驗室Petrochemical Testing Laboratory，能夠做到即時生產、即時品質檢測與管理；我們，誓言要帶給大家最棒的產品！</br></p>
+          <hr/>
+          <h2><b>製造商介紹</b></h2>
+          <p class="text">　　民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？我們深入了解後才知道，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。</p>
+            <p class="text"><br>　　為此，我們在當時與全世界最大的添加劑廠商路博潤（Lubrizol）技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。經過時間的推移，公司成立至今已走過了20幾個年頭，目前合作的添加劑廠商除了最早的路博潤（Lubrizol）以外，現在更多了潤英聯（Infineum）、雅富頓（Afton），而雪佛龍（Chevron Oronite）近期則是還在洽談當中。</br></p>
+            <p class="text"><br>　　目前公司的主要營業項目可分為工業用油與汽機車用油兩大類，並提供各式油品的OEM與ODM；我們也因確實落實的執行品質檢測與管理，設有石油化學檢測實驗室Petrochemical Testing Laboratory，以檢測工業用油與汽機車用油，其檢測項目有Flash Point、TBN（Total Base Number）、VI（Viscosity lndex）、CCS（Cold Cranking Simulator）、HTHS（High Temperature High Shear Viscosity）等等，若有相關問題，歡迎致電05-557-6016。
+        </br></p>
         </div>
       </div>
 
@@ -275,7 +276,7 @@
                   <article class="ans">
                     <p><br>一、Viscosity@40°C動黏度：<br>  在40°C下機油的流動率。
                        <br>二、Viscosity@100°C動黏度：<br>   在100°C下機油的流動率。
-                       <br>三、Viscosity lndex(VI)黏度指數：<br>  VI值越高，機油在引擎高溫運作下的穩定性就越好,所以VI值越高越好。
+                       <br>三、Viscosity lndex(VI)黏度指數：<br>  VI值越高，機油在引擎高溫運作下的穩定性就越好，所以VI值越高越好。
                        <br>四、Cold Cranking Simulator (CCS)：<br>  使用低溫模擬驅動裝置在-5和-30℃之間的發動機油表觀黏度的試驗方法。本標準規定在實驗室內以高剪速率測定車用機油在-5到-30℃間的視黏度。此數據相關於機油在引擎驅動的性能。
                        <br>五、High Temperature High Shear Viscosity(HTHS)：<br>  機油的性能不只與低溫下的黏度有關，而且還與其在高溫下的黏度也有關係。
                        由於多級油是非牛頓液體，因此在發動機情況下（150℃，剪切率10%）， 機油黏度在高溫下具有重要意義，故提出高溫高剪切黏度，簡稱HTHS(High Temperature High Shear)黏度。一般情況下，高溫高剪切黏度越高越好。 </p>
@@ -291,8 +292,8 @@
         <div class="content row">
           <div class="col-12 col-md-6">
             <h4>DP機油商業原則</h4>
-            <h5>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</h5>
-            <h5>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</h5>
+            <p>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
+            <p>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
           </div>
           <div class="col-12 col-md-6">
             <div class="row">
