--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
           <p><br>　　作為在地的Made In Taiwan品牌，我們團隊深入雲林斗六擴大工業區，找到了擁有20年以上經驗的專業機油滲配廠來進行生產；他們擁有專業的石油化學檢測實驗室Petrochemical Testing Laboratory，能夠做到即時生產、即時品質檢測與管理；我們，誓言要帶給大家最棒的產品！</br></p>
           <hr/>
           <h2><b>製造商介紹</b></h2>
-          <p class="text">　　民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？我們深入了解後才知道，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。</p>
-            <p class="text"><br>　　為此，我們在當時與全世界最大的添加劑廠商路博潤（Lubrizol）技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。經過時間的推移，公司成立至今已走過了20幾個年頭，目前合作的添加劑廠商除了最早的路博潤（Lubrizol）以外，現在更多了潤英聯（Infineum）、雅富頓（Afton），而雪佛龍（Chevron Oronite）近期則是還在洽談當中。</br></p>
-            <p class="text"><br>　　目前公司的主要營業項目可分為工業用油與汽機車用油兩大類，並提供各式油品的OEM與ODM；我們也因確實落實的執行品質檢測與管理，設有石油化學檢測實驗室Petrochemical Testing Laboratory，以檢測工業用油與汽機車用油，其檢測項目有Flash Point、TBN（Total Base Number）、VI（Viscosity lndex）、CCS（Cold Cranking Simulator）、HTHS（High Temperature High Shear Viscosity）等等，若有相關問題，歡迎致電05-557-6016。
+          <p>　　民榮行有限公司MIN JUNE HONG INC.成立於民國83年6月，原為進口國外機油的代理貿易經銷商，因民國85年左右台灣工業發展迅速，在當時的時空背景下，高速公路上其實有許多卡車、砂石車、甚至是大型的聯結車，他們都有個疑問，為什麼我們使用國外進口的機油，明明符合API規範，但我們的引擎怎麼還是常常出問題？我們深入了解後才知道，即使是使用符合API規範的機油，其規範的內容將其數值化後也只有60分，但那些大型車輛的駕駛們因為超載，常常將引擎的使用效率拉到最高甚至是破表，因此使用僅僅60分的機油是不夠的。</p>
+            <p><br>　　為此，我們在當時與全世界最大的添加劑廠商路博潤（Lubrizol）技術合作，他們提供機油的專業知識、配方、添加劑等，而我們則在斗六擴大工業區設立機油滲配廠，旨在製造出100分的機油，供給台灣各式各樣的車輛使用。經過時間的推移，公司成立至今已走過了20幾個年頭，目前合作的添加劑廠商除了最早的路博潤（Lubrizol）以外，現在更多了潤英聯（Infineum）、雅富頓（Afton），而雪佛龍（Chevron Oronite）近期則是還在洽談當中。</br></p>
+            <p><br>　　目前公司的主要營業項目可分為工業用油與汽機車用油兩大類，並提供各式油品的OEM與ODM；我們也因確實落實的執行品質檢測與管理，設有石油化學檢測實驗室Petrochemical Testing Laboratory，以檢測工業用油與汽機車用油，其檢測項目有Flash Point、TBN（Total Base Number）、VI（Viscosity lndex）、CCS（Cold Cranking Simulator）、HTHS（High Temperature High Shear Viscosity）等等，若有相關問題，歡迎致電05-557-6016。
         </br></p>
         </div>
       </div>
@@ -221,7 +221,11 @@
                 <div class="card card-body">
                   <p class="ans_title">A2.</p>
                   <article class="ans">
-                    <p>一、保護能力較好<br>二、高溫抗氧化能力強<br>三、比礦物油的使用壽命延長1-2倍<br>四、油品消耗少<br>五、使用溫度範圍廣，可用於極低和極高的環境溫度….等許多優點</p>
+                    <p>一、保護能力較好</p>
+                    <p>二、高溫抗氧化能力強</p>
+                    <p>三、比礦物油的使用壽命延長1-2倍</p>
+                    <p>四、油品消耗少</p>
+                    <p>五、使用溫度範圍廣，可用於極低和極高的環境溫度….等許多優點</p>
                   </article>
                 </div>
               </div>
@@ -274,11 +278,11 @@
                 <div class="card card-body">
                   <p class="ans_title">A5.</p>
                   <article class="ans">
-                    <p><br>一、Viscosity@40°C動黏度：<br>  在40°C下機油的流動率。
-                       <br>二、Viscosity@100°C動黏度：<br>   在100°C下機油的流動率。
-                       <br>三、Viscosity lndex(VI)黏度指數：<br>  VI值越高，機油在引擎高溫運作下的穩定性就越好，所以VI值越高越好。
-                       <br>四、Cold Cranking Simulator (CCS)：<br>  使用低溫模擬驅動裝置在-5和-30℃之間的發動機油表觀黏度的試驗方法。本標準規定在實驗室內以高剪速率測定車用機油在-5到-30℃間的視黏度。此數據相關於機油在引擎驅動的性能。
-                       <br>五、High Temperature High Shear Viscosity(HTHS)：<br>  機油的性能不只與低溫下的黏度有關，而且還與其在高溫下的黏度也有關係。
+                    <p>一、Viscosity@40°C動黏度：<br>  在40°C下機油的流動率。</p>
+                       <p>二、Viscosity@100°C動黏度：<br>   在100°C下機油的流動率。</p>
+                       <p>三、Viscosity lndex(VI)黏度指數：<br>  VI值越高，機油在引擎高溫運作下的穩定性就越好，所以VI值越高越好。</p>
+                       <p>四、Cold Cranking Simulator (CCS)：<br>  使用低溫模擬驅動裝置在-5和-30℃之間的發動機油表觀黏度的試驗方法。本標準規定在實驗室內以高剪速率測定車用機油在-5到-30℃間的視黏度。此數據相關於機油在引擎驅動的性能。</p>
+                       <p>五、High Temperature High Shear Viscosity(HTHS)：<br>  機油的性能不只與低溫下的黏度有關，而且還與其在高溫下的黏度也有關係。
                        由於多級油是非牛頓液體，因此在發動機情況下（150℃，剪切率10%）， 機油黏度在高溫下具有重要意義，故提出高溫高剪切黏度，簡稱HTHS(High Temperature High Shear)黏度。一般情況下，高溫高剪切黏度越高越好。 </p>
                   </article>
                 </div>
