--- a/index.html
+++ b/index.html
@@ -196,6 +196,16 @@
                 </div>
               </div>
             </li>
+            <li>
+              <div class="quest"><a data-toggle="collapse" href="#act_a2" role="button" aria-expanded="false" aria-controls="a2">雲科專屬優惠</a></div>
+              <div class="answer collapse" id="act_a2">
+                <div class="card card-body">
+                  <p class="ans_title">雲科專屬優惠</p>
+                  <article class="ans">
+                    <p><br>凡購買機油者可約時間免費替換機油(可由粉專或LINE聯絡)</p>
+                  </article>
+                </div>
+              </div>
           </ul>
         </div>
       </div>
@@ -296,8 +306,8 @@
         <div class="content row">
           <div class="col-12 col-md-6">
             <h4>DP機油商業原則</h4>
-            <p>做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
-            <p>我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
+            <p>　　做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
+            <p>　　我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
           </div>
           <div class="col-12 col-md-6">
             <div class="row">
@@ -323,7 +333,7 @@
               </div>
               <div class="col-12 contact">
                 <div class="row">
-                  <div class="col-12 col-md-4">
+                  <div class="col-12 col-md-3">
                     <h4>聯絡我</h4>
                     <h5>電話: 0958750564</h5>
                     <h5>Line: dpmotoroil</h5>
