--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!------------------------------------------------------------>
       <div id="home">
         <div class="cover"><img src="./img/DP.png"/>
-          <h1 class="display-4">DP專業機油</h1>
+          <h1 class="display-4">Deltec-專業潤滑油品牌</h1>
           <div class="p">
             <p>主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p>
             <p>添加劑堅持與國際添加劑大廠合作，一、路博潤（Lubrizol）二、潤英聯（Infineum）三、雅富頓（Afton），三家國際大廠合作。</p>
