--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--vue-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
-    <title>DPMotorOil</title>
+    <title>Deltec</title>
   </head>
   <body>
     <div id="loading">
@@ -38,7 +38,7 @@
             <li class="nav-item"><a class="nav-link" href="#sale" onclick="fn(3)">活動與促銷</a></li>
             <!--<li class="nav-item"><a class="nav-link" href="#recommend" onclick="fn(5)">推薦</a></li>-->
             <li class="nav-item"><a class="nav-link" href="#story" onclick="fn(7)">品牌故事</a></li>
-            <li class="nav-item"><a class="nav-link" href="#about" onclick="fn(2)">關於DP</a></li>
+            <li class="nav-item"><a class="nav-link" href="#about" onclick="fn(2)">關於Deltec</a></li>
             <li class="nav-item"><a class="nav-link" href="#QA" onclick="fn(4)">Q&A</a></li>
           </ul>
         </div>
