--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <!------------------------------------------------------------>
     <div class="container" id="nav">
-      <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top"><a class="navbar-brand sitename" href="#home" onclick="home()">DPMotorOil</a>
+      <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top"><a class="navbar-brand sitename" href="#home" onclick="home()">Deltec-專業潤滑油0000000</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlist" aria-controls="navlist" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
         <div class="collapse navbar-collapse bg-dark" id="navlist">
           <ul class="navbar-nav mr-auto">
@@ -123,14 +123,14 @@
           <p>　　別人進口機油，我們進口技術，別人派送專員勘查進口商，我們派送技術員與國際大廠研發技術，別人進口的是產品，我們去交流的是技術，擁有國際的技術，進口國際原料大廠，在地製造生產，過程全程監督，別人可以抽查前做足準備，我們永遠都在監督下做足品質。 </p>
           <hr/>
           <h2><b>Deltec-專業潤滑油最終目標</b></h2>
-          <p>　　DP專業機油與台灣在地專業製造商合作，以及我們自身專業且完善的實驗室，來做到更優良的產品，來超越各種進口機油，以及台灣在地其他品牌，成為最專業的機油製造團隊，打造最強大的機油品牌。</p>
+          <p>　　Deltec-專業潤滑油與台灣在地專業製造商合作，以及我們自身專業且完善的實驗室，來做到更優良的產品，來超越各種進口機油，以及台灣在地其他品牌，成為最專業的機油製造團隊，打造最強大的機油品牌。</p>
           <hr/>
           <h2><b>Deltec推陳出新</b></h2>
-          <p>　　DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。DP專業機油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
+          <p>　　Deltec-專業潤滑油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。Deltec-專業潤滑油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
           <hr/>
           <h2><b>Deltec-專業潤滑油核心價值</b></h2>
           <h4><b>TECHNOLOGY</b></h4>
-          <p>　　們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用自身嚴格把關和挑選國際級原物料，來創造最高品質的產品，在這方面的品質DP專業機油絕不怠惰。DP專業機油的產品性能，比市場上任何產品更好更優良。</p>
+          <p>　　們使用國內外最尖端的技術，Deltec-專業潤滑油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用自身嚴格把關和挑選國際級原物料，來創造最高品質的產品，在這方面的品質Deltec-專業潤滑油絕不怠惰。Deltec-專業潤滑油的產品性能，比市場上任何產品更好更優良。</p>
           <br>
           <h4><b>REATION</b></h4>
           <p>　　Deltec-專業潤滑油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。</p>
@@ -139,8 +139,8 @@
           <p>　　Deltec-專業潤滑油團隊的專業水準向國際標準看齊，專注研發和嚴以律己的態度，造就品牌的不同凡響。</p>
           <p><br>➤我們認為在任何一個市場的顧客，都能得到最好的照顧。</br></p>
           <p>　　➤我們使用國內外最尖端的技術，Deltec-專業潤滑油持續挑戰並精進自身技術並保值最佳品質。</p>
-          <p>　　➤我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP專業機油絕不懈怠。</p>
-          <p><br>　　DP專業機油產品性能夠比市場上任何產品更好。</br></p>
+          <p>　　➤我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質Deltec-專業潤滑油絕不懈怠。</p>
+          <p><br>　　Deltec-專業潤滑油產品性能夠比市場上任何產品更好。</br></p>
           <hr/>
           <h2><b>Deltec所做的</b></h2>
           <p>　　DDeltec-專業潤滑油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。</p>
@@ -151,10 +151,10 @@
           <p><br>　　綜合以上論點，我們能用最低的價格，做出最好的產品，盡量節省一切不必要的成本以及浪費，給予顧客CP值最高的價格，因為從研發到出貨都是統一管理，所以可以做到品質保證。</br></p>
           <hr/>
           <h2><b>Deltec的堅持</b></h2>
-          <p>　　DP專業機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
+          <p>　　Deltec-專業潤滑油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
           <hr/>
           <h2><b>Deltec的專業</b></h2>
-          <p>　　我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
+          <p>　　我們使用國內外最尖端的技術，Deltec-專業潤滑油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面Deltec-專業潤滑油絕不怠惰。Deltec-專業潤滑油產品性能，以數據佐證追求超越進口品牌。</p>
         </div>
       </div>
       <!------------------------------------------------------------>
@@ -307,7 +307,7 @@
           <div class="col-12 col-md-6">
             <h4>Deltec商業原則</h4>
             <p>　　做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
-            <p>　　我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
+            <p>　　我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望Deltec-專業潤滑油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
           </div>
           <div class="col-12 col-md-6">
             <div class="row">
