--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <!------------------------------------------------------------>
     <div class="container" id="nav">
-      <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top"><a class="navbar-brand sitename" href="#home" onclick="home()">Deltec-專業潤滑油0000000</a>
+      <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top"><a class="navbar-brand sitename" href="#home" onclick="home()">Deltec</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlist" aria-controls="navlist" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
         <div class="collapse navbar-collapse bg-dark" id="navlist">
           <ul class="navbar-nav mr-auto">
