--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
           <h4><b>COMMITMENT</b></h4>
           <p>　　Deltec-專業潤滑油團隊的專業水準向國際標準看齊，專注研發和嚴以律己的態度，造就品牌的不同凡響。</p>
           <p><br>➤我們認為在任何一個市場的顧客，都能得到最好的照顧。</br></p>
-          <p>　　➤我們使用國內外最尖端的技術，Deltec-專業潤滑油持續挑戰並精進自身技術並保值最佳品質。</p>
-          <p>　　➤我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質Deltec-專業潤滑油絕不懈怠。</p>
+          <p>➤我們使用國內外最尖端的技術，Deltec-專業潤滑油持續挑戰並精進自身技術並保值最佳品質。</p>
+          <p>➤我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質Deltec-專業潤滑油絕不懈怠。</p>
           <p><br>　　Deltec-專業潤滑油產品性能夠比市場上任何產品更好。</br></p>
           <hr/>
           <h2><b>Deltec所做的</b></h2>
           <p>　　DDeltec-專業潤滑油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。</p>
-          <p><br>　　➤我們的價格：我們擁有國際的技術，台灣在地的產線，從原料、研發、量產、品管、包裝到出貨，完整的程序，達到最高品質及嚴格品管的最高原則，由網路行銷減少實體通路中被剝奪的利潤與不必要的成本，給顧客最直接的價格。</br></p>
-          <p>　　➤我們的戰略：我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。 </p>
-          <p>　　➤我們的策略：我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，甚至超越，成就台灣製造不輸國際品牌之能力。</p>
-          <p>　　➤我們的優勢：我們的主要優勢包括先進的技術開發和完整的產線，允許我們提供個人化開發項目，創造出與別人不同的價值。 </p>
+          <p><br>➤我們的價格：我們擁有國際的技術，台灣在地的產線，從原料、研發、量產、品管、包裝到出貨，完整的程序，達到最高品質及嚴格品管的最高原則，由網路行銷減少實體通路中被剝奪的利潤與不必要的成本，給顧客最直接的價格。</br></p>
+          <p>➤我們的戰略：我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。 </p>
+          <p>➤我們的策略：我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，甚至超越，成就台灣製造不輸國際品牌之能力。</p>
+          <p>➤我們的優勢：我們的主要優勢包括先進的技術開發和完整的產線，允許我們提供個人化開發項目，創造出與別人不同的價值。 </p>
           <p><br>　　綜合以上論點，我們能用最低的價格，做出最好的產品，盡量節省一切不必要的成本以及浪費，給予顧客CP值最高的價格，因為從研發到出貨都是統一管理，所以可以做到品質保證。</br></p>
           <hr/>
           <h2><b>Deltec的堅持</b></h2>
@@ -315,19 +315,19 @@
                 <h4>Get in Touch</h4>
                 <div class="row justify-content-center pics">
                   <div class="col-4 col-md-2">
-                    <div class="card"><a href="https://shopee.tw/DPMotorOil"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
+                    <div class="card"><a href="https://shopee.tw/deltec.oil"><img class="card-img-top" src="./img/footer/04.png" alt=""/></a></div>
                   </div>
                   <div class="col-4 col-md-2">
-                    <div class="card"><a href="http://seller.pcstore.com.tw/S143157385"><img class="card-img-top" src="./img/footer/02.png" alt=""/></a></div>
+                    <div class="card"><a href="http://seller.pcstore.com.tw/S125303413"><img class="card-img-top" src="./img/footer/02.png" alt=""/></a></div>
                   </div>
                   <div class="col-4 col-md-2">
                     <div class="card"><a href="http://www.pcstore.com.tw/nich1648/"><img class="card-img-top" src="./img/footer/06.png" alt=""/></a></div>
                   </div>
                   <div class="col-4 col-md-2">
-                    <div class="card"><a href="http://class.ruten.com.tw/user/index00.php?s=nich1648"><img class="card-img-top" src="./img/footer/01.png" alt=""/></a></div>
+                    <div class="card"><a href="http://class.ruten.com.tw/user/index00.php?s=deltec_oil"><img class="card-img-top" src="./img/footer/01.png" alt=""/></a></div>
                   </div>
                   <div class="col-4 col-md-2">
-                    <div class="card"><a href="https://tw.bid.yahoo.com/booth/Y7807992086?bfe=1"><img class="card-img-top" src="./img/footer/05.png" alt=""/></a></div>
+                    <div class="card"><a href="https://tw.bid.yahoo.com/booth/Y8695860638?bfe=1"><img class="card-img-top" src="./img/footer/05.png" alt=""/></a></div>
                   </div>
                 </div>
               </div>
@@ -339,7 +339,7 @@
                     <h5>Line: dpmotoroil</h5>
                   </div>
                   <div class="col-6 col-md-3"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
-                  <div class="col-6 col-md-3"><a href="https://www.facebook.com/DPMotorOil/"><img src="./img/about/facebook.png"/></a></div>
+                  <div class="col-6 col-md-3"><a href="https://www.facebook.com/Deltec-1974318839551925/"><img src="./img/about/facebook.png"/></a></div>
                 </div>
               </div>
             </div>
