--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@
                 <div class="row">
                   <div class="col-12 col-md-3">
                     <h4>聯絡我</h4>
+                    <h5>電話: 0972171162</h5>
                     <h5>電話: 0958750564</h5>
-                    <h5>Line: dpmotoroil</h5>
+                    <h5>Line: @wgo9189a</h5>
                   </div>
                   <div class="col-6 col-md-3"><a href="http://line.me/ti/p/ThOQTykWBO"><img src="./img/about/L.png"/></a></div>
                   <div class="col-6 col-md-3"><a href="https://www.facebook.com/Deltec-1974318839551925/"><img src="./img/about/facebook.png"/></a></div>
@@ -345,7 +346,7 @@
             </div>
           </div>
         </div>
-        <div class="end"><a href="https://www.facebook.com/DPMotorOil/">2018 Copyright © DPMotorOil All Rights Reserved.Design by Taiwan Products</a></div>
+        <div class="end"><a href="https://www.facebook.com/Deltec-1974318839551925">2018 Copyright © Deltec All Rights Reserved.Design by Taiwan Products</a></div>
       </div>
     </div>
     <!------------------------------------------------------------>
