--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="main">
       <!------------------------------------------------------------>
       <div id="home">
-        <div class="cover"><img src="./img/DP.png"/>
+        <div class="cover"><img src="./img/DELTEC.png"/>
           <h1 class="display-4">Deltec-專業潤滑油品牌</h1>
           <div class="p">
             <p>主打國際技術台灣在地研發、製造、包裝與品管，在台統一管理並積極研發各種油化保養產品。</p>
